@@ -3,12 +3,14 @@ package sr.we.ui.views.pos;
 import com.vaadin.flow.component.html.Div;
 import com.vaadin.flow.data.provider.CallbackDataProvider;
 import com.vaadin.flow.data.provider.DataProvider;
+import com.vaadin.flow.data.provider.Query;
 import sr.we.ContextProvider;
-import sr.we.data.controller.ProductService;
 import sr.we.data.controller.ItemsService;
 import sr.we.security.AuthenticatedUser;
 import sr.we.shekelflowcore.entity.Items;
-import sr.we.shekelflowcore.entity.Product;
+import sr.we.shekelflowcore.entity.helper.vo.PageRequestImpl;
+import sr.we.shekelflowcore.entity.helper.vo.ServicesVO;
+import sr.we.shekelflowcore.entity.helper.vo.SuperVO;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -17,24 +19,77 @@ import java.util.stream.Collectors;
 public class DataProviders extends Div {
 
 
-
     public static CallbackDataProvider<ProductOrService, String> getServices(String business) {
         CallbackDataProvider<ProductOrService, String> dataProvider;
         dataProvider = DataProvider.fromFilteringCallbacks(query -> {
-            int pageSize = query.getPageSize();
-            int page = query.getPage();
-
-            List<ProductOrService> list = new ArrayList<>();
+            ServicesVO vo = new ServicesVO();
+            vo.setBusiness(Long.valueOf(business));
+            filterString(query, vo);
             ItemsService productService = ContextProvider.getBean(ItemsService.class);
-            List<Items> list1 = productService.list(AuthenticatedUser.token(), Long.valueOf(business)).getResult();
-            list = list1.stream().map(ProductOrService::new).collect(Collectors.toList());
+            List<Items> list1 = productService.list(AuthenticatedUser.token(), vo).getResult();
+            List<ProductOrService> list = list1.stream().map(ProductOrService::new).toList();
             return list.stream();
         }, query -> {
             ItemsService productService = ContextProvider.getBean(ItemsService.class);
-            List<Items> list1 = productService.list(AuthenticatedUser.token(), Long.valueOf(business)).getResult();
-            return list1.size();
+            ServicesVO vo = new ServicesVO();
+            vo.setBusiness(Long.valueOf(business));
+            filterStringCount(query, vo);
+            return productService.list(AuthenticatedUser.token(), vo).getCount().intValue();
         });
         return dataProvider;
+    }
+
+    public static DataProvider<Items, Void> getItems(String business) {
+        DataProvider<Items, Void> dataProvider;
+        dataProvider = DataProvider.fromFilteringCallbacks(getItemsVoidFetchCallback(business), getItemsVoidCountCallback(business));
+        return dataProvider;
+    }
+
+    public static CallbackDataProvider.CountCallback<Items, Void> getItemsVoidCountCallback(String business) {
+        return query -> {
+            ItemsService productService = ContextProvider.getBean(ItemsService.class);
+            ServicesVO vo = new ServicesVO();
+            vo.setBusiness(Long.valueOf(business));
+            filterVoidCount(vo);
+            return productService.list(AuthenticatedUser.token(), vo).getCount().intValue();
+        };
+    }
+
+    public static CallbackDataProvider.FetchCallback<Items, Void> getItemsVoidFetchCallback(String business) {
+        return query -> {
+            ServicesVO vo = new ServicesVO();
+            vo.setBusiness(Long.valueOf(business));
+            filterVoid(query, vo);
+            ItemsService productService = ContextProvider.getBean(ItemsService.class);
+            List<Items> list1 = productService.list(AuthenticatedUser.token(), vo).getResult();
+            return list1.stream();
+        };
+    }
+
+    private static void filterStringCount(Query<?, String> query, SuperVO vo) {
+        PageRequestImpl pageRequest = PageRequestImpl.of(0, 1);
+        if(query.getFilter().isPresent()) {
+            pageRequest.setFilter(query.getFilter().get());
+        }
+        vo.setPageRequest(pageRequest);
+    }
+
+    private static void filterString(Query<?, String> query, SuperVO vo) {
+        PageRequestImpl pageRequest = PageRequestImpl.of(query.getPage(), query.getPageSize());
+        if(query.getFilter().isPresent()) {
+            pageRequest.setFilter(query.getFilter().get());
+        }
+        vo.setPageRequest(pageRequest);
+    }
+
+    private static void filterVoidCount(SuperVO vo) {
+        PageRequestImpl pageRequest = PageRequestImpl.of(0, 1);
+        vo.setPageRequest(pageRequest);
+    }
+
+    private static void filterVoid(Query<?, Void> query, SuperVO vo) {
+        PageRequestImpl pageRequest = PageRequestImpl.of(query.getPage(), query.getPageSize());
+        vo.setPageRequest(pageRequest);
     }
 
 //    static DataProvider<ProductOrServiceGrid, Void> getProductsGrid(String business) {
@@ -79,25 +134,25 @@ public class DataProviders extends Div {
     public static DataProvider<ProductOrServiceGrid, Void> getServicesGrid(String business) {
         DataProvider<ProductOrServiceGrid, Void> dataProvider;
         dataProvider = DataProvider.fromCallbacks(query -> {
-            int pageSize = query.getPageSize();
-            int page = query.getPage();
-
-            List<ProductOrService> list = new ArrayList<>();
+            ServicesVO vo = new ServicesVO();
+            vo.setBusiness(Long.valueOf(business));
             ItemsService productService = ContextProvider.getBean(ItemsService.class);
-            List<Items> list1 = productService.list(AuthenticatedUser.token(), Long.valueOf(business)).getResult();
-            list = list1.stream().map(ProductOrService::new).collect(Collectors.toList());
+            List<Items> list1 = productService.list(AuthenticatedUser.token(), vo).getResult();
+            List<ProductOrService> list = list1.stream().map(ProductOrService::new).collect(Collectors.toList());
 
             List<ProductOrServiceGrid> list2 = toGrid(list);
             return list2.stream();
         }, query -> {
             ItemsService productService = ContextProvider.getBean(ItemsService.class);
-            List<Items> list1 = productService.list(AuthenticatedUser.token(), Long.valueOf(business)).getResult();
+            ServicesVO vo = new ServicesVO();
+            vo.setBusiness(Long.valueOf(business));
+            List<Items> list1 = productService.list(AuthenticatedUser.token(), vo).getResult();
             return rowSize(list1);
         });
         return dataProvider;
     }
 
-    private static List<ProductOrServiceGrid> toGrid(List<ProductOrService> list) {
+    public static List<ProductOrServiceGrid> toGrid(List<ProductOrService> list) {
         List<ProductOrServiceGrid> list2 = new ArrayList<>();
         ProductOrServiceGrid productOrServiceGrid = null;
         for (int i = 0; i < list.size(); i++) {
@@ -116,7 +171,6 @@ public class DataProviders extends Div {
         }
         return list2;
     }
-
 
 
     private static int rowSize(List<?> list1) {
